<resources>
    <string name="app_name" translatable="false">LeChat</string>

    <!-- MainScreen -->
    <string name="AI" translatable="false">AI</string>
    <string name="you" translatable="false">You</string>
    <string name="message">Message…</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="title">Title</string>
    <string name="applyRename">Apply rename</string>
    <string name="cancelRename">Cancel rename</string>
    <string name="deleteChat">Delete chat</string>
    <string name="regenerate">Regenerate</string>
    <!--  Can't name it "copy", because there is already a private string in Material Library  -->
    <string name="_copy">Copy</string>
    <string name="maxTokens">Max tokens(0 for unlimited)</string>
    <string name="temperature">Temperature</string>
    <string name="frequencyPenalty">Frequency penalty</string>
    <string name="top_p">Top-P</string>
    <string name="model">Model</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="chats">Chats</string>
    <string name="addChat">Add chat</string>
    <string name="deleted">Deleted %1$s</string>
    <string name="undo">Undo</string>

    <!--  Settings  -->
    <string name="settings">Settings</string>
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="api" translatable="false">API</string>
    <string name="togetherAPIKey">TogetherAI API Key</string>
    <string name="save">Save</string>
    <string name="another">Another</string>
    <string name="showDrawerAnimation">Show drawer animation</string>
    <string name="createTitleByAI">Create titles of chats by AI</string>
    <string name="createSuggestionsByAI">Create suggestions by AI</string>
    <string name="version">Version %1$s</string>

    <!--  Default values  -->
    <string name="defaultTemperature">0.7f</string>
    <string name="defaultMaxTokens">0</string>
    <string name="defaultFrequencyPenalty">1.0f</string>
    <string name="defaultTopP">0.7f</string>
    <string name="defaultShowDrawerAnimation">true</string>
    <string name="defaultCreateTitleByAI">true</string>
    <string name="defaultCreateSuggestionsByAI">true</string>
</resources>