<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/maxTokensEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:hint="@string/maxTokens"
            android:inputType="number"
            android:maxLength="8"
            android:maxLines="1"
            android:text="@string/defaultMaxTokens" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/temperatureEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:hint="@string/temperature"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:maxLines="1"
            android:text="@string/defaultTemperature" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/frequencyPenaltyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:hint="@string/frequencyPenalty"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:maxLines="1"
            android:text="@string/defaultFrequencyPenalty" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/topPEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:hint="@string/top_p"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:maxLines="1"
            android:text="@string/defaultTopP" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.pandacorp.dropspinner.DropDownView
        android:id="@+id/modelSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="?colorSurface"
        android:minHeight="48dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="6dp"
        app:dropsyItems="@array/Models"
        app:dropsyLabelColor="?colorOnSurface"
        app:dropsySelector="?android:textColor"
        app:dropsyValueColor="?colorOnSurface"
        app:rippleColor="?rippleColor"
        app:strokeColor="?inactiveStrokeColor"
        app:strokeWidth="1dp" />
</LinearLayout>