<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:paddingBottom="4dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?colorPrimary"
        app:strokeColor="?strokeColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    tools:text="Chat with AI" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:hint="@string/title"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="14sp"
                    android:visibility="gone"
                    tools:text="Chat with AI" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp">

                <ImageButton
                    android:id="@+id/renameChatButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/edit"
                    android:src="@drawable/ic_edit"
                    tools:visibility="gone" />

                <ImageButton
                    android:id="@+id/applyRenameButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/applyRename"
                    android:src="@drawable/ic_apply"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <ImageButton
                    android:id="@+id/deleteChatButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/deleteChat"
                    android:src="@drawable/ic_delete"
                    tools:visibility="gone" />

                <ImageButton
                    android:id="@+id/cancelRenameButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/cancelRename"
                    android:src="@drawable/ic_close"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </FrameLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>
