<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbarInclude"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/appearanceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="5dp"
                    android:text="@string/appearance"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/appearanceCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:cardBackgroundColor="?colorSurface"
                    app:strokeColor="?strokeColor"
                    app:strokeWidth="@dimen/stroke">

                    <LinearLayout
                        android:id="@+id/appearanceLayouts"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/themeLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingStart="5dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="5dp"
                            android:paddingBottom="10dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/theme"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:src="@drawable/ic_theme" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/theme"
                                    android:textSize="16sp" />

                                <TextView
                                    android:id="@+id/themeTextView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColor="?android:textColorSecondary"
                                    android:textSize="14sp"
                                    tools:text="BlueTheme" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/api"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:cardBackgroundColor="?colorSurface"
                    app:strokeColor="?strokeColor"
                    app:strokeWidth="@dimen/stroke">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingStart="5dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/togetherAPIKey"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:src="@drawable/ic_api" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp">

                            <EditText
                                android:id="@+id/apiEditText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/togetherAPIKey"
                                android:importantForAutofill="no"
                                android:textSize="14sp" />

                            <ImageButton
                                android:id="@+id/saveApiKeyButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="?selectableItemBackgroundBorderless"
                                android:src="@drawable/ic_save" />
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/anotherTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/another"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/versionCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:cardBackgroundColor="?colorSurface"
                    app:strokeColor="?strokeColor"
                    app:strokeWidth="@dimen/stroke">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/drawerAnimationLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingStart="5dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="5dp"
                            android:paddingBottom="10dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/version"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:src="@drawable/ic_drawer" />

                            <com.google.android.material.switchmaterial.SwitchMaterial
                                android:id="@+id/drawerAnimationSwitch"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@string/defaultShowDrawerAnimation"
                                android:paddingStart="10dp"
                                android:paddingTop="10dp"
                                android:paddingEnd="5dp"
                                android:paddingBottom="10dp"
                                android:text="@string/showDrawerAnimation"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/chatTitleLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingStart="5dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="5dp"
                            android:paddingBottom="10dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/createTitleByAI"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:src="@drawable/ic_title" />

                            <com.google.android.material.switchmaterial.SwitchMaterial
                                android:id="@+id/chatTitleSwitch"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@string/defaultCreateTitleByAI"
                                android:paddingStart="10dp"
                                android:paddingTop="10dp"
                                android:paddingEnd="5dp"
                                android:paddingBottom="10dp"
                                android:text="@string/createTitleByAI"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/versionLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingStart="5dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="5dp"
                            android:paddingBottom="10dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/version"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:src="@drawable/ic_version" />

                            <TextView
                                android:id="@+id/versionTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="10dp"
                                android:paddingTop="10dp"
                                android:paddingEnd="5dp"
                                android:paddingBottom="10dp"
                                android:textSize="14sp"
                                tools:text="Version 1.0" />
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>